Add better JVM config to the build